client/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  template:
    metadata:
      name: client
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: client:1.0.0
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: client
