client/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
