client/kubernetes/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: client
spec:
  host: client
  subsets:
    - name: v1
      labels:
        app: client
