client/kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
    - 'client.istio'
  gateways:
    - istio-system/istio-gateway
  http:
    - route:
      - destination:
          host: client
          port:
            number: 80
